# DTE-2600

./: README.md
Oblig/Oblig1_Kalkulator/: calculator.cpp  header.h  main.cpp
Oblig1_Kalkulator/: CMakeLists.txt  main.cpp
Oblig2_Shape/: CMakeLists.txt  base.h  circle.h  main.cpp  square.h  triangle.h
Oblig3_ArealVask/: Building.cpp  Building.h  CMakeLists.txt  Handler.cpp  Handler.h  Room.cpp  Room.h  main.cpp  main.cpp.RQNTeo
Personal-Projects/Stack-Calculator/: CMakeLists.txt  main.cpp
Undervisning/Temperatur-oppg/: CMakeLists.txt  header.h  main.cpp  temperature.cpp
Undervisning/klasser-person/: CMakeLists.txt  main.cpp  person.cpp  person.h
